manifests/rng-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rng-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rng.foo.bar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rng
                port:
                  number: 80
